--- a/index.html
+++ b/index.html
@@ -3,7 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shader Studio</title>
+    <title>Shader Studio - Interactive Procedural Shader Generator</title>
+    <meta
+      name="description"
+      content="High-performance interactive web application for creating, customizing, and exporting stunning procedural shaders and generative art using React, Three.js, and GLSL."
+    />
+    <meta
+      name="keywords"
+      content="shader, glsl, procedural, threejs, react, webgl, generative-art, creative-coding, gradient, animation, interactive, gpu-accelerated, vfx, visual-effects, design-tools, export-gif, export-video"
+    />
+    <meta name="author" content="Muhanned Amged" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shader-studio.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Shader Studio - Interactive Procedural Shader Generator"
+    />
+    <meta
+      property="og:description"
+      content="Create, customize, and export stunning procedural shaders and generative art in real-time."
+    />
+    <meta
+      property="og:image"
+      content="https://shader-studio.vercel.app/preview.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://shader-studio.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="Shader Studio - Interactive Procedural Shader Generator"
+    />
+    <meta
+      property="twitter:description"
+      content="Create, customize, and export stunning procedural shaders and generative art in real-time."
+    />
+    <meta
+      property="twitter:image"
+      content="https://shader-studio.vercel.app/preview.png"
+    />
+
+    <link rel="canonical" href="https://shader-studio.vercel.app/" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✨</text></svg>"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
