--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shader Studio - Interactive Procedural Shader Generator</title>
+    <title>Shader Studio</title>
     <meta
       name="description"
       content="High-performance interactive web application for creating, customizing, and exporting stunning procedural shaders and generative art using React, Three.js, and GLSL."
